# server.js
@@ -11,13 +11,18 @@ dotenv.config();
 import YAML from "yamljs";
 import swaggerUi from "swagger-ui-express";
 
-import { register, login } from "./controllers/authController.js";
-import { validateRegister, validateLogin } from "./middlewares/validate.js";
+import { authenticateToken } from "./middlewares/authMiddleware.js";
+import sessionRoutes from "./routes/sessionRoute.js";
+import authRoutes from "./routes/authRoute.js";
 //------------------------------------------------------------
 
 // App setup
 const app = express();
 const PORT = process.env.PORT || 4000;
+
+// Middlewares
+app.use(cors());
+app.use(express.json());
 
 // Swagger setup
 const swaggerDocument = YAML.load("./swagger.yaml");
@@ -25,34 +30,24 @@ const swaggerOptions = {
     customCss: ".swagger-ui .topbar { display: none }",
     customSiteTitle: "SCRIPTA API Docs",
 };
-app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument, swaggerOptions));    
-
-// Route to get current user info (Protected route)
-app.get("/api/me", (req, res) => {
-    const auth = req.headers.authorization;
-    if (!auth) return res.status(401).json({ error: "Missing token" });
-
-    const token = auth.split("")[1];
-    try {
-        const decoded = jwt.verify(token, process.env.JWT_SECRET);
-        return res.json({ user: decoded });
-    } catch (err) {
-        return res.status(401).json({ error: "Invalid or expired token" });
-    }
-});
-
-// Middlewares
-app.use(cors());
-app.use(express.json());
+app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument, swaggerOptions));
 
 // ROUTES
 //------------------------------------------------------------
 app.get("/health", (req, res) => res.json({ status: "ok" })); // status route
 
 // Auth routes
-app.post("/api/auth/register", validateRegister, register); // registration route
-app.post("/api/auth/login", validateLogin, login); // login route
+app.use('/api/auth', authRoutes); // auth routes
 
+// Session routes (protected)
+app.use("/api/sessions", sessionRoutes); // session management routes
+
+// Route to get current user info (Protected route)
+app.get("/api/me", authenticateToken, (req, res) => {
+    return res.json({ user: req.user });
+});
+
+// Start server
 //------------------------------------------------------------
 app.listen(PORT, () => {
     console.log(`Server running on http://localhost:${PORT}`);
